/*
 * Copyright 2015 Tawja.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package org.tawja.platform.plugins.database.api;

/**
 *
 * @author jbennani
 */
public interface TwjDatabase<T> {

    public void start();

    public void stop();

    public void update();

    public String getName();

    public String getServerType();

    public String getServerName();

    public String getPath();

    public String getUrl();

    public String getUser();

    public String getPassword();

    public int getPoolMaxConnections();

    public int getPoolTimeout();

    public int getPoolMaxIdleConnectionLife();

}
